@@ -25,6 +25,8 @@ ebox_services_mirror_count = 2
 # If set to a 'true' value, the ebox QA updates have priority and
 # other packages sources have the lowest priority and they will not
 # be used.
+# If you change this value, you must run the following command:
+#  sudo /usr/share/ebox-software/rewrite-conf
 # (Default: true)
 qa_updates_exclusive_source = true
 
