@@ -1,0 +1,33 @@
+#!/usr/bin/perl
+
+# Copyright (C) 2011 eBox Technologies S.L.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License, version 2, as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+# Script to rewrite the software configuration since it is not a
+# service with daemons
+
+use strict;
+use warnings;
+
+use EBox;
+use EBox::Global;
+
+EBox::init();
+
+my $software = EBox::Global->modInstance('software');
+
+$software->save();
+
+1;
