@@ -1,3 +1,5 @@
+HEAD
+	+ Fix bug when removing QA updates in preferences file
 2.0.9
 	+ Safer regexes in ebox-update-packages and ebox-remove-packages
 	+ Do not ignore kernel packages in system updates
