@@ -1,3 +1,5 @@
+HEAD
+	+ Indicate script to run when changing configuration file
 2.0.8
 	+ Remote backup is now overwritten with Basic Subscription
 	+ Using a new key from bundle or dnsServer as fallback to set the
